# apex-compiler

./: .gitignore  CHANGELOG.md  CHANGELOGS.md  CHANGELOS.md  CONTRIBUTING.md  Cargo.toml  README.md  changelogs.md  test_examples.bat
.cargo/: config.toml
.github/workflows/: ci.yml  push-debug.yml  release.yml
benchmark/: README.md  run.py
benchmark/c/: matrix_mul.c  (+2 more)
docs/: projects.md
examples/: 01_hello.apex  02_variables.apex  03_math.apex  04_control_flow.apex  05_classes.apex  06_enums.apex  07_interfaces.apex  08_modules.apex  09_generics.apex  10_ownership.apex  11_lambdas.apex  12_string_interp.apex  13_error_handling.apex  14_async.apex  15_stdlib.apex  16_pattern_matching.apex  17_comprehensive.apex  18_file_io.apex  19_time.apex  20_system.apex  21_conversions.apex  21_math.apex  22_args.apex  23_str_utils.apex  24_test_attributes.apex  27_extern_c_interop.apex  32_extern_safe_wrapper.apex  35_visibility_enforcement.apex  36_inheritance_extends.apex  37_interfaces_contracts.apex  38_import_aliases.apex  39_compound_assign.apex  README.md  app_bank.apex  app_calculator.apex  app_data_structures.apex  app_game.apex  app_notes.apex  app_todo.apex
scripts/: check_examples.sh  ci_cli_smoke.sh  ci_cli_smoke_windows.ps1  test.sh  test_stdlib.sh
src/: ast.rs  borrowck.rs  codegen.rs  formatter.rs  import_check.rs  lexer.rs  lint.rs  lsp.rs  main.rs  namespace.rs  parser.rs  project.rs  project_rewrite.rs  stdlib.rs  test_runner.rs  typeck.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
(+102 files in other folders)
